Eevee Viewport Shading Render Passes have problems once the saturation of the material becomes 1 #74063

Closed
opened 2020-02-21 06:24:39 +01:00 by Zijun Zhou · 13 comments
Contributor

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: (optional)

Short description of error
Once the saturation of the base color in the Principled BSDF reach 1, the color will remain in the "Diffuse Direct/ Indirect", "Glossy Direct/Indirect" (if the metalic value is not 0). If you enable those passes in "Render Layer Properties" Tab, and hit render, and go to the compositor, you can see these passes in the final render is actually pure white.

Exact steps for others to reproduce the error
Based on the attched .blend file, which is a cube and a plane with a red default Principled BSDF Material. And the Viewport Shading Render Passes is currently set to "Diffuse Direct".

  1. Toggle renderded view, since it is currently set to "Diffuse Direct", you should normally see a white cube and a white plane, but you only see them being red.
  2. In the Shader Editor down below, change the saturation of the base color to any value other than 1, you can see the two becomes white.
  3. Turn the saturation back to 1. I have already enabled the passes in "Render Layer Properties" tab, so you only need to hit render image.
  4. After rendering, go to the compositor, you can see the "Diffuse Direct" pass is linked to a viewer node, so you can see the pass in the background. The pass displays a white cube and a white plane.
    Viewport Passes Saturation Bug.001.png

Viewport Passes Saturation Bug.002.png

Viewport Passes Saturation Bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: (optional) **Short description of error** Once the saturation of the base color in the Principled BSDF reach 1, the color will remain in the "Diffuse Direct/ Indirect", "Glossy Direct/Indirect" (if the metalic value is not 0). If you enable those passes in "Render Layer Properties" Tab, and hit render, and go to the compositor, you can see these passes in the final render is actually pure white. **Exact steps for others to reproduce the error** Based on the attched .blend file, which is a cube and a plane with a red default Principled BSDF Material. And the Viewport Shading Render Passes is currently set to "Diffuse Direct". 1. Toggle renderded view, since it is currently set to "Diffuse Direct", you should normally see a white cube and a white plane, but you only see them being red. 2. In the Shader Editor down below, change the saturation of the base color to any value other than 1, you can see the two becomes white. 3. Turn the saturation back to 1. I have already enabled the passes in "Render Layer Properties" tab, so you only need to hit render image. 4. After rendering, go to the compositor, you can see the "Diffuse Direct" pass is linked to a viewer node, so you can see the pass in the background. The pass displays a white cube and a white plane. ![Viewport Passes Saturation Bug.001.png](https://archive.blender.org/developer/F8355977/Viewport_Passes_Saturation_Bug.001.png) ![Viewport Passes Saturation Bug.002.png](https://archive.blender.org/developer/F8355980/Viewport_Passes_Saturation_Bug.002.png) [Viewport Passes Saturation Bug.blend](https://archive.blender.org/developer/F8355983/Viewport_Passes_Saturation_Bug.blend)
Author
Contributor

Added subscriber: @Eary

Added subscriber: @Eary
Zijun Zhou changed title from Viewport Shading Render Passes have problems once the saturation of the material becomes 1 to Cycles Viewport Shading Render Passes have problems once the saturation of the material becomes 1 2020-02-21 06:38:38 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Contributor

I just tested the new Eevee Diffuse Light pass in 2.83 daily build. the same bug goes to Eevee as well, but worse, the rendered Eevee diffuse pass in the compositor is also red. Please check both Cycles and Eevee.

I just tested the new Eevee Diffuse Light pass in 2.83 daily build. the same bug goes to Eevee as well, but worse, the rendered Eevee diffuse pass in the compositor is also red. Please check both Cycles and Eevee.

This issue was referenced by blender/cycles@1e1c765185

This issue was referenced by blender/cycles@1e1c765185e3fce2f45d1ae74187df9010cb9811

This issue was referenced by c05d83bc76

This issue was referenced by c05d83bc7632367f0a7e910d69d470ab89cf649d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-02-25 19:52:41 +01:00
Brecht Van Lommel changed title from Cycles Viewport Shading Render Passes have problems once the saturation of the material becomes 1 to Eevee Viewport Shading Render Passes have problems once the saturation of the material becomes 1 2020-02-25 19:53:09 +01:00
Brecht Van Lommel removed their assignment 2020-02-25 19:53:09 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker

@Jeroen-Bakker, @fclem, check safe_divide_even_color in Cycles for how to divide out the color in a way that keeps the cube gray.

@Jeroen-Bakker, @fclem, check `safe_divide_even_color` in Cycles for how to divide out the color in a way that keeps the cube gray.
Jeroen Bakker self-assigned this 2020-02-27 08:29:08 +01:00

This issue was referenced by 50f9c08979

This issue was referenced by 50f9c08979bfd336616e31f3fc71a901e310db5b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Contributor

Oh it's fixed now? Cool! By the way I discovered today that the "sheen" value in the Principled BSDF also affects the result, this is probably not a bug but I still would like to know why. Could anyone expain that for me?

Oh it's fixed now? Cool! By the way I discovered today that the "sheen" value in the Principled BSDF also affects the result, this is probably not a bug but I still would like to know why. Could anyone expain that for me?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74063
No description provided.