Fix T74063: Cycles light pass viewport display wrong with saturated colors